update css ( Responsive layout) , add click function on div "slider" and "secondSlider"

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ body {
   background-color: #f8f8f8;
   font-family: "Cormorant Infant", serif;
   margin: 0px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 header {
   display: flex;
@@ -19,11 +22,11 @@ header {
   padding-bottom: 40px;
 }
 .top h2 {
-  font-size: 36px;
+  font-size: 300%;
 }
 .top p {
   margin-top: -30px;
-  font-size: 16px;
+  font-size: 100%;
 }
 .navigation {
   border-top: 1px solid #e6e6e6;
@@ -38,6 +41,7 @@ header {
   display: flex;
   padding: 0;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .navigation ul li a {
@@ -50,41 +54,44 @@ header {
 .navigation ul li a:hover {
   color: #48974c;
 }
+.sliderWrap{
+  height: 500px;
+}
 .slider {
   width: 100%;
   background-image: url(../img/image@1X.png);
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: 100%;
   height: 500px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+.slider .container {
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
 .slider .text {
   background: white;
+  border: solid;
+  height: 100%;
   width: 49%;
-  height: 30%;
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start;
   flex-direction: column;
-}
-.slider .container {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
 }
 .slider .text h2 {
   color: #404040;
-  font-size: 60px;
+  font-size: 350%;
   text-align: left;
   padding-left: 20px;
   padding-right: 20px;
 }
 .slider .text p {
   color: #404040;
-  font-size: 18px;
+  font-size: 120%;
   text-align: left;
   padding-left: 20px;
   padding-right: 20px;
@@ -94,13 +101,14 @@ header {
   padding-bottom: 20px;
 }
 .content {
-  padding-top: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-bottom: 40px;
 }
 .content .container {
+  padding-top:20px;
+  padding-bottom: 20px;
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
@@ -135,6 +143,7 @@ header {
   height: 300px;
   background-image: url(../img/BigNews1.png);
   background-position: center center;
+  background-repeat: no-repeat;
 }
 .NewsPhoto-2 {
   background-image: url(../img/BigNews2.png);
@@ -184,6 +193,10 @@ header {
   background: none;
   text-align: center;
 }
+.leftButton button:hover {
+  color: white;
+  background-color:#48974c;
+}
 .rightButton {
   height: 100%;
   width: 35%;
@@ -219,22 +232,13 @@ header {
   font-weight: bold;
 }
 .lastButton button:hover {
-  height: 57px;
-  width: 100%;
-  color: white;
-  font-size: 14px;
-  font-family: PTSans-Bold, AdobeInvisFont, MyriadPro-Regular;
-  text-transform: uppercase;
-  font-weight: bold;
-  border: 1px solid white;
-  background: none;
-  text-align: center;
+ color:#48974c;
+ background-color:white;
 }
 .lastButton button:focus {
   outline: none;
   border: 3px solid white;
 }
-
 .smallNews {
   width: 49%;
   display: flex;
@@ -246,22 +250,22 @@ header {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  padding-bottom: 20px;
 }
 .smallContent {
-  padding-top: 25px;
-  width: 49%;
+  padding-top: 20px;
+  width: 48%;
   background-color: white;
   border: 3px solid #f8f8f8;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  padding-bottom: 10px;
 }
 .smallNewsPost {
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -282,16 +286,51 @@ header {
   margin-top: -10px;
   font-size: 16px;
   font-family: PTSans-Regular, AdobeInvisFont, MyriadPro-Regular;
+  color:#737373;
+}
+.smallContent .buttons {
+  width: 90%;
+  align-self: center;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-bottom: 0px;
+  height:100%;
+}
+.smallContent .buttons span {
+  font-weight: bold;
+  background-color: #48974c;
+  color: white;
+  display:flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  width: 25px;
+  height: 25px;
+  border: 1px solid #48974c;
+  border-radius: 50%;
+  font-size: 20px;
+}
+.smallContent .buttons a {
+  padding-left: 5px;
+  text-decoration: none;
+  color: #48974c;
+  font-family: PTSans-Bold, AdobeInvisFont, MyriadPro-Regular;
+  text-transform: uppercase;
+  font-size:14px;
+}
+.smallContent .buttons a:hover{
+  font-size:16px;
 }
 .smallButtons {
-  width: 64%;
+  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 .smallButtons a {
   height: 57px;
-  width: 100%;
+  width: 12%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -314,7 +353,7 @@ header {
 .secondSlider {
   background-image: url(../img/image@2X.png);
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-position: center center;
   height: 500px;
   display: flex;
   justify-content: center;
@@ -345,7 +384,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-right: 20px;
+  padding-right: 40px;
   padding-left: 20px;
 
   background-color: white;
@@ -361,34 +400,54 @@ header {
   text-transform: uppercase;
   font-weight: bold;
   color: white;
-  background-color: #48974c;
+  background-color: 48974c;
   border: 1px solid #48974c;
   padding: 20px;
 }
+.secondSliderButton button:hover{
+  color:#white;
+  background-color:rgba(0, 0, 0, 0.09);
+}
 .beforeFooter {
-  height: 340px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .beforeFooterContent {
   width: 80%;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  background-color: white;
+  justify-content: center;
 }
 .leftSide {
-  height: 100%;
-  padding: 20px;
+  height: 200px;
   width: 23%;
-  border-right: 20px solid #f8f8f8;
+  background-color: white;
+  border: 10px solid #f8f8f8;
+  display: flex;
+  flex-direction: column;
+}
+.leftSideText {
+  width: 80%;
+  display: flex;
+  align-self: center;
+}
+.leftSideImage {
+  width: 80%;
+  display: flex;
+  align-self: center;
 }
 .leftSideImage img {
   width: 100%;
 }
 .rightSide {
-  width: 70%;
+  border: 10px solid #f8f8f8;
+  background-color: white;
+  height: 200px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -443,17 +502,136 @@ footer {
   font-size: 16px;
   padding: 8px;
 }
+.footerCenter a:hover{
+  color:#48974c;
+}
 .footerRight {
   width: 30%;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 }
-.footerRightIcons{
-    padding-bottom:25px;
+.footerRightIcons {
+  padding-bottom: 25px;
 }
-.footerRightIcons a{
-    padding-left:15px;
-    padding-bottom: 5px;
+.footerRightIcons a {
+  padding-left: 15px;
+  padding-bottom: 5px;
 }
-
+@media screen and (max-width: 1100px) {
+  .slider .text h2 {
+    font-size: 300%;
+  }
+  .slider .text p {
+    font-size: 110%;
+  }
+}
+@media screen and (max-width: 970px) {
+  .container,
+  .beforeFooterContent,
+  .footerContent {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .slider .container {
+    width: 90%;
+    height: 80%;
+  }
+  .navigation ul {
+    justify-content: center;
+  }
+  .navigation ul li {
+    padding: 5px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .smallButtons{
+    justify-content: center;
+  }
+  .slider .text h2 {
+    font-size: 250%;
+  }
+  .slider .text p {
+    font-size: 100%;
+  }
+  .secondSliderContent {
+    width: 100%;
+  }
+  .footerInfo {
+    padding-top: 25px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .footerLeft,
+  .footerCenter,
+  .footerRight {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .footerCopyRight {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .secondSliderText {
+    margin-left: 20px;
+    padding-right: 50px;
+  }
+  .content .container {
+    flex-direction: column;
+  }
+  .bigNews {
+    width: 100%;
+  }
+  .smallNews {
+    padding-top: 20px;
+    width: 100%;
+  }
+  .beforeFooterContent {
+    display: block;
+    padding: 0px;
+  }
+  .leftSide,
+  .rightSide {
+    border: none;
+  }
+  .leftSide {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    border-bottom: 20px solid #f8f8f8;
+  }
+  .leftSideText {
+    justify-content: center;
+  }
+  .leftSideImage {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 515px) {
+  .navigation ul {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .navigation ul li {
+    padding: 5px;
+  }
+  .slider .text {
+    width: 70%;
+  }
+  @media screen and (max-width: 350px) {
+    .slider .text {
+      width: 80%;
+    }
+    .content {
+      padding-bottom: 0px;
+    }
+  }
+}
